feat(23-01): make hero visual break the grid
- Added margin-right: -40px to .hero-visual for grid breakout
- Creates asymmetric layout that extends beyond container
- Mobile override: margin-right: 0 to preserve content on small screens
- Existing overflow: hidden on .hero prevents horizontal scroll

--- a/index.html
+++ b/index.html
@@ -991,6 +991,7 @@
         .hero-visual {
             position: relative;
             animation: fadeIn 1s ease 0.3s both;
+            margin-right: -40px; /* Break out of container on right (Phase 23-01) */
         }
 
         .hero-card {
@@ -4263,6 +4264,11 @@
             .hero-testimonial {
                 font-size: 0.9rem;
                 padding: 10px 16px;
+            }
+
+            /* Remove grid breakout on mobile (Phase 23-01) */
+            .hero-visual {
+                margin-right: 0;
             }
 
             section { padding: 60px 0; }
