--- a/index.html
+++ b/index.html
@@ -413,10 +413,67 @@
             border: 0;
         }
 
+        /* =====================
+           UTILITY BAR (Phase 25)
+           Slim bar above nav with click-to-call
+           ===================== */
+        .utility-bar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1001;
+            background: var(--gray-900);
+            color: var(--white);
+            padding: var(--space-2) 0;
+            font-size: var(--text-sm);
+        }
+
+        .utility-bar .container {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+        }
+
+        .phone-link {
+            display: inline-flex;
+            align-items: center;
+            gap: var(--space-2);
+            color: var(--white);
+            text-decoration: none;
+            font-family: var(--font-body);
+            font-weight: 500;
+            padding: var(--space-2) var(--space-3);
+            border-radius: var(--radius-full);
+            transition: background var(--transition-fast);
+            min-height: 44px;
+        }
+
+        .phone-link:hover {
+            background: rgba(255, 255, 255, 0.1);
+        }
+
+        .phone-link svg {
+            flex-shrink: 0;
+        }
+
+        /* Mobile: Center phone, ensure tap target */
+        @media (max-width: 768px) {
+            .utility-bar .container {
+                justify-content: center;
+            }
+
+            .phone-link {
+                flex: 1;
+                justify-content: center;
+                max-width: 280px;
+            }
+        }
+
         /* Navigation - Clean Professional Design */
         .nav {
             position: fixed;
-            top: 0;
+            top: 44px;
             left: 0;
             right: 0;
             z-index: 1000;
@@ -634,7 +691,7 @@
 
         .mobile-nav {
             position: fixed;
-            top: 72px;
+            top: 116px; /* 72px nav + 44px utility bar */
             left: 0;
             right: 0;
             background: white;
@@ -2507,12 +2564,18 @@
             transform: translateY(-2px);
         }
 
+        /* Featured tier active state - Phase 23-04 */
+        .featured-tier .tier-cta:active {
+            transform: translateY(0) scale(0.98);
+            box-shadow: 0 2px 6px rgba(124, 58, 237, 0.3);
+        }
+
         @media (max-width: 900px) {
             .pricing-tiers-new {
                 grid-template-columns: 1fr;
                 max-width: 400px;
             }
-            
+
             .pricing-tier-new.featured-tier {
                 transform: none;
                 order: -1;
@@ -5983,6 +6046,18 @@
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
+
+    <!-- Utility Bar - Click to Call (Phase 25) -->
+    <div class="utility-bar">
+        <div class="container">
+            <a href="tel:+61491791447" class="phone-link">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                    <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
+                </svg>
+                <span class="phone-number">0491 791 447</span>
+            </a>
+        </div>
+    </div>
 
     <!-- Navigation -->
     <nav class="nav" id="nav" role="navigation" aria-label="Main navigation">
