--- a/index.html
+++ b/index.html
@@ -425,67 +425,10 @@
             border: 0;
         }
 
-        /* =====================
-           UTILITY BAR (Phase 25)
-           Slim bar above nav with click-to-call
-           ===================== */
-        .utility-bar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 1001;
-            background: var(--gray-900);
-            color: var(--white);
-            padding: var(--space-2) 0;
-            font-size: var(--text-sm);
-        }
-
-        .utility-bar .container {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-        }
-
-        .phone-link {
-            display: inline-flex;
-            align-items: center;
-            gap: var(--space-2);
-            color: var(--white);
-            text-decoration: none;
-            font-family: var(--font-body);
-            font-weight: 500;
-            padding: var(--space-2) var(--space-3);
-            border-radius: var(--radius-full);
-            transition: background var(--transition-fast);
-            min-height: 44px;
-        }
-
-        .phone-link:hover {
-            background: rgba(255, 255, 255, 0.1);
-        }
-
-        .phone-link svg {
-            flex-shrink: 0;
-        }
-
-        /* Mobile: Center phone, ensure tap target */
-        @media (max-width: 768px) {
-            .utility-bar .container {
-                justify-content: center;
-            }
-
-            .phone-link {
-                flex: 1;
-                justify-content: center;
-                max-width: 280px;
-            }
-        }
-
         /* Navigation - Clean Professional Design */
         .nav {
             position: fixed;
-            top: 44px;
+            top: 0;
             left: 0;
             right: 0;
             z-index: 1000;
@@ -703,7 +646,7 @@
 
         .mobile-nav {
             position: fixed;
-            top: 116px; /* 72px nav + 44px utility bar */
+            top: 72px; /* nav height */
             left: 0;
             right: 0;
             background: white;
@@ -6059,18 +6002,6 @@
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
 
-    <!-- Utility Bar - Click to Call (Phase 25) -->
-    <div class="utility-bar">
-        <div class="container">
-            <a href="tel:+61491791447" class="phone-link">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-                    <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
-                </svg>
-                <span class="phone-number">0491 791 447</span>
-            </a>
-        </div>
-    </div>
-
     <!-- Navigation -->
     <nav class="nav" id="nav" role="navigation" aria-label="Main navigation">
         <div class="container">
@@ -7365,7 +7296,7 @@
         <div class="sticky-cta-container">
             <a href="tel:+61491791447" class="sticky-cta-phone" aria-label="Call BEAM Academy">
                 <span aria-hidden="true">&#128222;</span>
-                <span class="sticky-cta-phone-text">Call</span>
+                <span class="sticky-cta-phone-text phone-number">0491 791 447</span>
             </a>
             <a href="#contact" class="sticky-cta-button">Get Your Free Diagnostic</a>
         </div>
@@ -7406,10 +7337,10 @@
                 <div class="footer-column">
                     <h4>Subjects</h4>
                     <ul class="footer-links">
-                        <li><a href="#courses" class="footer-link">Mathematics</a></li>
-                        <li><a href="#courses" class="footer-link">English</a></li>
-                        <li><a href="#courses" class="footer-link">Chemistry</a></li>
-                        <li><a href="#courses" class="footer-link">Physics</a></li>
+                        <li><a href="mathematics.html" class="footer-link">Mathematics</a></li>
+                        <li><a href="english.html" class="footer-link">English</a></li>
+                        <li><a href="chemistry.html" class="footer-link">Chemistry</a></li>
+                        <li><a href="physics.html" class="footer-link">Physics</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
