feat(26-03): add contact information and Google Map
- Add phone with tel: link and gold accent highlight
- Add email with mailto: link
- Add address with location icon
- Add operating hours card with purple accent
- Add response time expectation note
- Embed Google Map with lazy loading
- Use SVG icons for visual clarity

--- a/contact.html
+++ b/contact.html
@@ -305,7 +305,98 @@
             </div>
         </section>
 
-        <!-- Contact Info & Map placeholder - Task 2 will fill this -->
+        <!-- Contact Info & Map Section -->
+        <section class="contact-section animate-on-scroll">
+            <div class="container">
+                <div class="contact-grid">
+                    <!-- Contact Information Card -->
+                    <div class="contact-info-card">
+                        <h2 class="contact-info-title">Contact Information</h2>
+                        <div class="contact-items">
+                            <!-- Phone -->
+                            <div class="contact-item">
+                                <div class="contact-icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
+                                </div>
+                                <div class="contact-item-content">
+                                    <div class="contact-item-label">Phone</div>
+                                    <div class="contact-item-value phone-highlight">
+                                        <a href="tel:+61491791447" class="phone-number">0491 791 447</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Email -->
+                            <div class="contact-item">
+                                <div class="contact-icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
+                                </div>
+                                <div class="contact-item-content">
+                                    <div class="contact-item-label">Email</div>
+                                    <div class="contact-item-value">
+                                        <a href="mailto:admin@beamacademy.info">admin@beamacademy.info</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Address -->
+                            <div class="contact-item">
+                                <div class="contact-icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>
+                                </div>
+                                <div class="contact-item-content">
+                                    <div class="contact-item-label">Address</div>
+                                    <div class="contact-item-value">
+                                        Suite 206, 2 Pembroke Street<br>
+                                        Epping NSW 2121
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Operating Hours -->
+                        <div class="hours-card">
+                            <div class="hours-title">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
+                                Operating Hours
+                            </div>
+                            <div class="hours-grid">
+                                <div class="hours-row">
+                                    <span class="hours-day">Monday - Friday</span>
+                                    <span class="hours-time">3:00 PM - 9:00 PM</span>
+                                </div>
+                                <div class="hours-row">
+                                    <span class="hours-day">Saturday</span>
+                                    <span class="hours-time">9:00 AM - 5:00 PM</span>
+                                </div>
+                                <div class="hours-row">
+                                    <span class="hours-day">Sunday</span>
+                                    <span class="hours-time closed">Closed</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Response Time Note -->
+                        <div class="response-note">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/><polyline points="22 4 12 14.01 9 11.01"/></svg>
+                            <span>We typically respond within 24 hours</span>
+                        </div>
+                    </div>
+
+                    <!-- Google Map -->
+                    <div class="map-container">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3315.123!2d151.0823!3d-33.7727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12a6b5e3c0d6d9%3A0x3c6d5f5e5e5e5e5e!2s2%20Pembroke%20St%2C%20Epping%20NSW%202121!5e0!3m2!1sen!2sau!4v1704000000000!5m2!1sen!2sau"
+                            width="100%"
+                            height="100%"
+                            style="border:0;"
+                            allowfullscreen=""
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"
+                            title="BEAM Academy Location - 2 Pembroke Street, Epping NSW 2121">
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- Form placeholder - Task 3 will fill this -->
 
