--- a/index.html
+++ b/index.html
@@ -6011,9 +6011,10 @@
                     BEAM Academy
                 </a>
                 <ul class="nav-links">
+                    <li><a href="about.html" class="nav-link">About Us</a></li>
+                    <li><a href="results.html" class="nav-link">Results</a></li>
                     <li><a href="#courses" class="nav-link">Courses & Pricing</a></li>
-                                                            <li><a href="#faq" class="nav-link">FAQ</a></li>
-                    <li><a href="#contact" class="nav-cta nav-cta-secondary" data-action="pay">Pay Now</a></li>
+                    <li><a href="contact.html" class="nav-link">Contact</a></li>
                     <li><a href="#contact" class="nav-cta">Free Diagnostic</a></li>
                 </ul>
                 <button class="mobile-toggle" aria-label="Toggle menu" aria-expanded="false" aria-controls="mobile-nav">
@@ -6028,8 +6029,10 @@
     <!-- Mobile Navigation -->
     <div class="mobile-nav" id="mobile-nav" role="navigation" aria-label="Mobile navigation">
         <ul class="mobile-nav-links">
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="results.html">Results</a></li>
             <li><a href="#courses">Courses & Pricing</a></li>
-                                    <li><a href="#faq">FAQ</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="#contact" data-action="pay" class="mobile-pay-link">Pay Now</a></li>
             <li><a href="#contact">Get Your Free Diagnostic</a></li>
         </ul>
@@ -7329,8 +7332,11 @@
                 <div class="footer-column">
                     <h4>Quick Links</h4>
                     <ul class="footer-links">
+                        <li><a href="about.html" class="footer-link">About Us</a></li>
+                        <li><a href="results.html" class="footer-link">Results</a></li>
+                        <li><a href="contact.html" class="footer-link">Contact</a></li>
                         <li><a href="#courses" class="footer-link">Courses & Pricing</a></li>
-                                                <li><a href="#contact" class="footer-link" data-action="pay">Pay Now</a></li>
+                        <li><a href="#contact" class="footer-link" data-action="pay">Pay Now</a></li>
                         <li><a href="https://beamffef.netlify.app/login" class="footer-link" target="_blank" rel="noopener">Student Portal</a></li>
                     </ul>
                 </div>
