feat(26-04): update new page navigation for consistency
- Add Results and Contact links to about.html nav/footer
- Add Contact link to results.html nav/footer
- Standardize contact.html nav with About Us and Results links
- Add cross-links: about→results, results→about+contact, contact→about
- Update all mobile nav menus consistently
- Ensure active states on current page links

--- a/about.html
+++ b/about.html
@@ -199,7 +199,9 @@
                 </a>
                 <ul class="nav-links">
                     <li><a href="about.html" class="nav-link active">About Us</a></li>
+                    <li><a href="results.html" class="nav-link">Results</a></li>
                     <li><a href="index.html#courses" class="nav-link">Courses & Pricing</a></li>
+                    <li><a href="contact.html" class="nav-link">Contact</a></li>
                     <li><a href="index.html#contact" class="nav-cta">Free Diagnostic</a></li>
                 </ul>
                 <button class="mobile-toggle" aria-label="Toggle menu" aria-expanded="false" aria-controls="mobile-nav">
@@ -215,7 +217,9 @@
     <div class="mobile-nav" id="mobile-nav" role="navigation" aria-label="Mobile navigation">
         <ul class="mobile-nav-links">
             <li><a href="about.html" class="active">About Us</a></li>
+            <li><a href="results.html">Results</a></li>
             <li><a href="index.html#courses">Courses & Pricing</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="index.html#contact">Get Your Free Diagnostic</a></li>
         </ul>
     </div>
@@ -396,6 +400,7 @@
                     <p class="cta-text">Book a free diagnostic lesson and experience our data-driven approach firsthand.</p>
                     <a href="index.html#contact" class="btn btn-primary">Get Your Free Diagnostic</a>
                     <p class="cta-note">Free lesson. No payment required. Keep the diagnostic report either way.</p>
+                    <p class="cta-note" style="margin-top: 16px;"><a href="results.html" style="color: var(--purple-700); text-decoration: underline;">See our student results →</a></p>
                 </div>
             </div>
         </section>
@@ -419,6 +424,8 @@
                     <h4>Quick Links</h4>
                     <ul class="footer-links">
                         <li><a href="about.html" class="footer-link">About Us</a></li>
+                        <li><a href="results.html" class="footer-link">Results</a></li>
+                        <li><a href="contact.html" class="footer-link">Contact</a></li>
                         <li><a href="index.html#courses" class="footer-link">Courses & Pricing</a></li>
                         <li><a href="https://beamffef.netlify.app/login" class="footer-link" target="_blank" rel="noopener">Student Portal</a></li>
                     </ul>
