--- a/contact.html
+++ b/contact.html
@@ -267,9 +267,9 @@
                     BEAM Academy
                 </a>
                 <ul class="nav-links">
-                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="about.html" class="nav-link">About Us</a></li>
+                    <li><a href="results.html" class="nav-link">Results</a></li>
                     <li><a href="index.html#courses" class="nav-link">Courses & Pricing</a></li>
-                    <li><a href="index.html#faq" class="nav-link">FAQ</a></li>
                     <li><a href="contact.html" class="nav-link active">Contact</a></li>
                     <li><a href="index.html#contact" class="nav-cta">Free Diagnostic</a></li>
                 </ul>
@@ -285,9 +285,9 @@
     <!-- Mobile Navigation -->
     <div class="mobile-nav" id="mobile-nav" role="navigation" aria-label="Mobile navigation">
         <ul class="mobile-nav-links">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="results.html">Results</a></li>
             <li><a href="index.html#courses">Courses & Pricing</a></li>
-            <li><a href="index.html#faq">FAQ</a></li>
             <li><a href="contact.html" class="active">Contact</a></li>
             <li><a href="index.html#contact">Get Your Free Diagnostic</a></li>
         </ul>
@@ -301,6 +301,7 @@
                     <div class="hero-category">Get in Touch</div>
                     <h1>We'd Love to <span>Hear from You</span></h1>
                     <p class="hero-description">Ready to start your child's journey to better grades? Reach out by phone, email, or visit our Epping centre.</p>
+                    <p style="margin-top: 16px; font-size: var(--text-sm); color: var(--gray-500);"><a href="about.html" style="color: var(--purple-600);">Learn about our tutors →</a></p>
                 </div>
             </div>
         </section>
@@ -518,8 +519,10 @@
                 <div class="footer-column">
                     <h4>Quick Links</h4>
                     <ul class="footer-links">
+                        <li><a href="about.html" class="footer-link">About Us</a></li>
+                        <li><a href="results.html" class="footer-link">Results</a></li>
+                        <li><a href="contact.html" class="footer-link">Contact</a></li>
                         <li><a href="index.html#courses" class="footer-link">Courses & Pricing</a></li>
-                        <li><a href="index.html#contact" class="footer-link">Pay Now</a></li>
                         <li><a href="https://beamffef.netlify.app/login" class="footer-link" target="_blank" rel="noopener">Student Portal</a></li>
                     </ul>
                 </div>
