--- a/results.html
+++ b/results.html
@@ -342,6 +342,7 @@
                     <li><a href="about.html" class="nav-link">About Us</a></li>
                     <li><a href="results.html" class="nav-link active">Results</a></li>
                     <li><a href="index.html#courses" class="nav-link">Courses & Pricing</a></li>
+                    <li><a href="contact.html" class="nav-link">Contact</a></li>
                     <li><a href="index.html#contact" class="nav-cta">Free Diagnostic</a></li>
                 </ul>
                 <button class="mobile-toggle" aria-label="Toggle menu" aria-expanded="false" aria-controls="mobile-nav">
@@ -357,8 +358,9 @@
     <div class="mobile-nav" id="mobile-nav" role="navigation" aria-label="Mobile navigation">
         <ul class="mobile-nav-links">
             <li><a href="about.html">About Us</a></li>
-            <li><a href="results.html">Results</a></li>
+            <li><a href="results.html" class="active">Results</a></li>
             <li><a href="index.html#courses">Courses & Pricing</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="index.html#contact">Get Your Free Diagnostic</a></li>
         </ul>
     </div>
@@ -590,6 +592,7 @@
                     <p>Start with a free diagnostic to see exactly where you stand and how we can help you improve.</p>
                     <a href="index.html#contact" class="btn btn-primary">Get Your Free Diagnostic</a>
                     <p class="cta-risk-reversal">Free lesson. No payment required. Keep the diagnostic either way.</p>
+                    <p class="cta-risk-reversal" style="margin-top: 12px;"><a href="about.html" style="color: var(--purple-200); text-decoration: underline;">Meet our tutors →</a> | <a href="contact.html" style="color: var(--purple-200); text-decoration: underline;">Contact us to get started →</a></p>
                 </div>
             </div>
         </section>
@@ -615,6 +618,7 @@
                     <ul class="footer-links">
                         <li><a href="about.html" class="footer-link">About Us</a></li>
                         <li><a href="results.html" class="footer-link">Results</a></li>
+                        <li><a href="contact.html" class="footer-link">Contact</a></li>
                         <li><a href="index.html#courses" class="footer-link">Courses & Pricing</a></li>
                         <li><a href="https://beamffef.netlify.app/login" class="footer-link" target="_blank" rel="noopener">Student Portal</a></li>
                     </ul>
