--- a/physics.html
+++ b/physics.html
@@ -195,7 +195,7 @@
                 </a>
                 <ul class="nav-links">
                     <li><a href="about.html" class="nav-link">About Us</a></li>
-                    <li><a href="results.html" class="nav-link">Results</a></li>
+                    
                     <li><a href="index.html#courses" class="nav-link">Courses & Pricing</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                     <li><a href="index.html#contact" class="nav-cta">Free Diagnostic</a></li>
@@ -320,7 +320,7 @@
                     <p>Expert tutoring for Years 7-12 by Baulkham Hills High School graduates achieving 95%+ in HSC Mathematics.</p>
                     <div class="social-links"><a href="https://www.instagram.com/beamacademyhsc" class="social-link" target="_blank" rel="noopener">&#128247;</a><a href="https://discord.gg/Y4Y8uTun" class="social-link" target="_blank" rel="noopener">&#128172;</a></div>
                 </div>
-                <div class="footer-column"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html" class="footer-link">About Us</a></li><li><a href="results.html" class="footer-link">Results</a></li><li><a href="contact.html" class="footer-link">Contact</a></li><li><a href="index.html#courses" class="footer-link">Courses & Pricing</a></li></ul></div>
+                <div class="footer-column"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html" class="footer-link">About Us</a></li><li><a href="contact.html" class="footer-link">Contact</a></li><li><a href="index.html#courses" class="footer-link">Courses & Pricing</a></li></ul></div>
                 <div class="footer-column"><h4>Subjects</h4><ul class="footer-links"><li><a href="mathematics.html" class="footer-link">Mathematics</a></li><li><a href="english.html" class="footer-link">English</a></li><li><a href="chemistry.html" class="footer-link">Chemistry</a></li><li><a href="physics.html" class="footer-link">Physics</a></li></ul></div>
                 <div class="footer-column"><h4>Contact</h4><ul class="footer-links"><li><a href="tel:0491791447" class="footer-link">0491 791 447</a></li><li><a href="mailto:admin@beamacademy.info" class="footer-link">admin@beamacademy.info</a></li><li><span class="footer-link">Epping NSW 2121</span></li></ul></div>
             </div>
